--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,7 +3,8 @@ version: ${project.version}
 main: com.github.alfonsoleandro.mpheadsexp.HeadsExp
 api-version: "1.13"
 authors: [lelesape]
-depend: [Vault, MPUtils, PlaceholderAPI]
+depend: [Vault, MPUtils]
+softdepend: [PlaceholderAPI]
 description: ${project.description}
 website: http://bit.ly/2mwvHWN
 
@@ -18,27 +19,27 @@ commands:
     usage: Command was not registered properly.
 
 permissions:
-  headsExp.version:
+  HeadsExp.version:
     description: Allows you to check the plugins version
     default: op
-  headsExp.reload:
+  HeadsExp.reload:
     description: Allows you to reload the plugin
     default: op
-  headsExp.xp.add:
+  HeadsExp.xp.add:
     description: Allows you to add xp to another player.
     default: op
-  headsExp.xp.see:
+  HeadsExp.xp.see:
     description: Allows you to see another player's xp.
     default: op
-  headsExp.xp.set:
+  HeadsExp.xp.set:
     description: Allows you to set another player's xp.
     default: op
-  headsExp.*:
+  HeadsExp.*:
     description: Gives access to every permission available
     default: op
     children:
-      headsExp.version: true
-      headsExp.reload: true
-      headsExp.add: true
-      headsExp.see: true
-      headsExp.set: true
+      HeadsExp.version: true
+      HeadsExp.reload: true
+      HeadsExp.add: true
+      HeadsExp.see: true
+      HeadsExp.set: true
