--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@
             <url>https://jitpack.io</url>
         </repository>
         <repository>
-            <id>placeholderapi</id>
+            <id>placeholderAPI-repo</id>
             <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
         </repository>
     </repositories>
